--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <title>My first HTML Dcoument</title>
 </head>
 <body>
-    <h1>Heading 1</h1>
-    <p>My First Paragraph.</p>
     <h2> Hyperlinks in HTML.    </h2>
-    <a href="https://ww.monash.edu/">
-        Click here to view the monash website
-    </a>
+
+    <h3> New heading added. </h3>
+    <p>This is the modified index.html file.</p>
+    
 </body>
 </html>    
+
