--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <h3> New heading added. </h3>
     <p>This is the modified index.html file.</p>
+    <h3> New heading added. </h3>
+    <p>This is the modified index.html file.</p>
     
 </body>
 </html>    
