--- a/hw10/index.html
+++ b/hw10/index.html
@@ -1,23 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <!-- Import Vega & Vega-Lite (does not have to be from CDN) -->
-  <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
-    
-  <!-- CSS file -->
-  <link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
+    <title>My first HTML Dcoument</title>
 </head>
 <body>
-    <div id="symbol_map"></div>
+    <h2> Hyperlinks in HTML.    </h2>
 
-    <script type="text/javascript">
+    <h3> New heading added. </h3>
+    <p>This is the modified index.html file.</p>
+    <h3> New heading added. </h3>
+    <p>This is the modified index.html file.</p>
     
-      var spec2 = "js/bubble.chart.json";
-      vegaEmbed('#symbol_map', spec2).then(function(result) {
-        // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-      }).catch(console.error);
-    </script>  
 </body>
-</html>
+</html>  
